<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@color/white"
    tools:context="com.example.chris.nyas_final.AdviceServicesActivity"    >


    <TextView
        android:id="@+id/adviceServicesMainTitle"
        android:text="@string/title_advice_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/nyas_dark_blue"

        android:elegantTextHeight="false"
        android:textSize="36dp"
        />

    <ImageView
        android:id="@+id/nyasLogo"
        android:src="@drawable/nyas_logo_small"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@color/white"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/adviceServicesSubTitle"
        android:text="@string/sub_title_advice_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_below="@id/adviceServicesMainTitle"
        />

    <TextView
        android:id="@+id/adviceServicesNote"
        android:text="@string/note_advice_services"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/adviceServicesSubTitle"

        android:elegantTextHeight="false"
        android:textSize="14dp"
         />

    <Button
        android:id="@+id/adviceServicesHelpLineButton"
        android:text="@string/button_text_helpline"
        android:layout_width="@dimen/normal_button_width"
        android:layout_height="@dimen/normal_button_height"
        android:textSize="@dimen/button_text_size"
        android:textAllCaps="false"
        android:layout_alignParentLeft="true"

        android:background="@color/nyas_purple"
        android:textColor="@color/white"

        android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"

        android:layout_below="@id/adviceServicesNote"

        android:onClick="helpLineClicked"
        />

    <Button
        android:id="@+id/adviceServicesRightsButton"
        android:text="@string/button_text_rights"
        android:layout_width="@dimen/normal_button_width"
        android:layout_height="@dimen/normal_button_height"
        android:textSize="@dimen/button_text_size"
        android:textAllCaps="false"

        android:background="@color/nyas_green"
        android:textColor="@color/white"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"

        android:layout_alignParentRight="true"
        android:layout_below="@id/adviceServicesNote"
        />

    <Button
        android:id="@+id/legalServicesButton"
        android:text="@string/button_text_legal_services"
        android:layout_width="@dimen/normal_button_width"
        android:layout_height="@dimen/normal_button_height"
        android:textSize="@dimen/button_text_size"
        android:textAllCaps="false"

        android:background="@color/nyas_blue"
        android:textColor="@color/white"

        android:layout_marginTop="5dp"
        android:layout_below="@id/adviceServicesHelpLineButton"

        android:onClick="legalServicesClicked"
        />

    <Button
        android:id="@+id/adviceServicesRedButton"
        android:text="@string/button_text_empty"
        android:layout_width="@dimen/normal_button_width"
        android:layout_height="@dimen/normal_button_height"
        android:textSize="@dimen/button_text_size"
        android:textAllCaps="false"
        android:background="@color/nyas_red"
        android:textColor="@color/white"

        android:layout_marginTop="5dp"

        android:layout_below="@id/adviceServicesRightsButton"
        android:layout_alignParentRight="true"
        />

</RelativeLayout>
