<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@color/white"
    tools:context="com.example.chris.nyas_final.HelplineActivity">

    <TextView
        android:id="@+id/contactMainTitle"
        android:text="@string/title_contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textSize="36dp"
        android:textColor="@color/nyas_dark_blue"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nyasLogo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/nyas_logo_small"
        android:background="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subTitle"
        android:layout_alignParentLeft="true"
        android:text="Use any of the options below to contact us."
        android:layout_below="@id/contactMainTitle"

        android:elegantTextHeight="false"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/note_contact_us"
        android:layout_below="@id/subTitle"
        android:id="@+id/note"
        android:elegantTextHeight="false"
        android:textSize="14dp" />

    <Button
        android:id="@+id/callNowButton"
        android:text="@string/button_text_call_now"
        android:layout_width="@dimen/normal_button_width"
        android:layout_height="@dimen/normal_button_height"
        android:textSize="@dimen/button_text_size"
        android:textAllCaps="false"
        android:layout_alignParentLeft="true"

        android:background="@color/nyas_purple"
        android:textColor="@color/white"

        android:layout_marginRight="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"

        android:layout_below="@id/note"

        android:onClick="callNowClicked"
        />

    <Button
        android:id="@+id/chatButton"
        android:text="@string/button_text_chat"
        android:layout_width="@dimen/normal_button_width"
        android:layout_height="@dimen/normal_button_height"
        android:textSize="@dimen/button_text_size"
        android:textAllCaps="false"

        android:background="@color/nyas_green"
        android:textColor="@color/white"

        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"

        android:layout_alignParentRight="true"
        android:layout_below="@id/note"
        />

    <Button
        android:id="@+id/emailButton"
        android:text="@string/button_text_email"
        android:layout_width="@dimen/normal_button_width"
        android:layout_height="@dimen/normal_button_height"
        android:textSize="@dimen/button_text_size"
        android:textAllCaps="false"

        android:background="@color/nyas_blue"
        android:textColor="@color/white"

        android:layout_marginTop="5dp"
        android:layout_below="@id/callNowButton"

        android:onClick="emailClicked"
        />

    <Button
        android:id="@+id/requestCallbackButton"
        android:text="@string/button_text_callback"
        android:layout_width="@dimen/normal_button_width"
        android:layout_height="@dimen/normal_button_height"
        android:textSize="@dimen/button_text_size"
        android:textAllCaps="false"
        android:background="@color/nyas_red"
        android:textColor="@color/white"

        android:layout_marginTop="5dp"

        android:layout_below="@id/chatButton"
        android:layout_alignParentRight="true"
        />


</RelativeLayout>
